--- a/customer_segments/customer_segments.html
+++ b/customer_segments/customer_segments.html
@@ -12704,7 +12704,7 @@ JCIiIiIiIiIiQVFASUREREREREREgvL/AWilto4tkCtLAAAAAElFTkSuQmCC
     <span class="n">X_train</span><span class="p">,</span> <span class="n">X_test</span><span class="p">,</span> <span class="n">y_train</span><span class="p">,</span> <span class="n">y_test</span> <span class="o">=</span> <span class="n">train_test_split</span><span class="p">(</span><span class="n">new_data</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">random_state</span> <span class="o">=</span> <span class="mi">0</span><span class="p">,</span> <span class="n">test_size</span> <span class="o">=</span> <span class="mf">0.25</span><span class="p">)</span>
 
     <span class="c1"># TODO: Create a decision tree regressor and fit it to the training set</span>
-    <span class="n">regressor</span> <span class="o">=</span> <span class="n">DecisionTreeRegressor</span><span class="p">(</span><span class="n">max_depth</span> <span class="o">=</span> <span class="mi">4</span><span class="p">)</span>
+    <span class="n">regressor</span> <span class="o">=</span> <span class="n">DecisionTreeRegressor</span><span class="p">(</span><span class="n">max_depth</span> <span class="o">=</span> <span class="mi">4</span><span class="p">,</span> <span class="n">random_state</span> <span class="o">=</span> <span class="mi">0</span><span class="p">)</span>
     <span class="n">regressor</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">X_train</span><span class="p">,</span><span class="n">y_train</span><span class="p">)</span>
 
     <span class="c1"># TODO: Report the score of the prediction using the testing set</span>
@@ -12771,6 +12771,7 @@ R2 score for predicting feature Delicatessen  is -10.577077151459516
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
 <p>I iterated over all features and checked their R2 scores. Based on the quality of the predictions shown above, I can draw the following conclusions that Milk, Grocery and Detergents_Paper are relatively easy to predict using the other features, while Frozen, Delicatessen are the two most difficult ones to predict.</p>
+<p>Based on this result, I believe that Grocery is the least important feature for predicting customer spending habit since it can be well represented by the rest of features; on the other hand, the feature Deli can not be represented by the rest of features, suggesting that Deli is an independent feature, although being an independent feature does not necessarily mean it's an important feature for predicting the pattern of customer spending habit.</p>
 
 </div>
 </div>
@@ -25895,6 +25896,15 @@ YxGIAAAAABiLQAQAAADAWAQiAAAAAMb6f6xX7jdqqtbwAAAAAElFTkSuQmCC
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Question-5">Question 5<a class="anchor-link" href="#Question-5">&#182;</a></h3><ul>
 <li>How much variance in the data is explained<em> <strong>in total</strong> </em>by the first and second principal component? </li>
 <li>How much variance in the data is explained by the first four principal components? </li>
@@ -25911,11 +25921,10 @@ YxGIAAAAABiLQAQAAADAWAQiAAAAAMb6f6xX7jdqqtbwAAAAAElFTkSuQmCC
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
-<ul>
-<li>the first and second principal components in total accounts for about 70.68% of tatal variance</li>
-<li>the first four principal components in total accounts for about 93.11% of total variance</li>
-<li>the first dimension is heavily reliant on Detergents_Paper, Grocery, and Milk, which are the 3 features we identified above as being most highly correlated. The second dimension appears to be orthogonal to the first, reducing the impact of Milk, Grocery, and Detergents_Paper, and instead relying on variation in Fresh, Frozen, and Deli items. The third dimension appears to be low Fresh spending and high Deli spending, and the 4th is low Deli, high Frozen.</li>
-</ul>
+<p>The first and second principal components in total accounts for about 70.68% of tatal variance, and the first four principal components in total accounts for about 93.11% of total variance.</p>
+<p>The first component has high feature weights on Milk, Grocery and Detergents_Paper, which are the 3 features we identified above as being most highly correlated. The second component appears to be orthogonal to the first, reducing the impact of Milk, Grocery, and Detergents_Paper, and instead has high feature weights on Fresh, Frozen, and Deli. The third dimension appears to be have a high weight on Fresh, Frozen and Deli which is similar to the 2nd component,  (Note it doesn't matter if it's negative or positive value because the eigen-vectors have two directions) , and the 4th component is has a high weight on Frozen and Deli.</p>
+<p>These results are interesting, especially when we think about the descriminative power of each principal component and the combination of these components. For example, the first and second component represent clearly different types of customers - those customers who purchase a lot of milk, grocery and Detergents_Paper may be a grocery store, while those who purchase more Fresh, Frozen and Deli may be a deli shop, caffe or restaurant.</p>
+<p>If we include the 3rd and 4th component, we may be able to get more descrimative power to classify the customers who buy more Fresh, Frozen and Deli into subgroups. This is because the 2nd, 3rd and 4th components all have high weights on Fresh, Frozen and Deli as we mentioned before, but each component weigh these features either positively or negatively. For example, so a combination of the 2nd and 3rd component may represent a subgroup of customers who purchase a lot of Fresh but little Frozen &amp; Deli or the opposite, therefore further descriminate a fresh produce store against a deli shop.</p>
 
 </div>
 </div>
@@ -27731,6 +27740,7 @@ HhAAAAAASUVORK5CYII=
 <li>Difficult to interpret.</li>
 </ol>
 <p>Given that (1) our data only has a relatively low number of dimensions , (2) and each feature has slightly different distributions which deviate from the normal distribution, therefore it's not clear whether the clusters are spherical or complex geometrical shaped, and (3) each feature has slightly different variance, I choose the Gaussian Mixture Model as the clustering method.</p>
+<p>For large datasets in future, an alternative strategy could be to go with the faster KMeans for preliminary analysis, and if you later think that the results could be significantly improved, use GMM in the next step while using the cluster assignments and centres obtained from KMeans as the initialisation for GMM. In fact, many implementations of GMM automatically perform this preliminary step for initialisation.</p>
 
 </div>
 </div>
@@ -28720,7 +28730,7 @@ iIiIiFQsBR4REREREalYCjwiIiIiIlKx/gIRrgV42MCnowAAAABJRU5ErkJggg==
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[42]:</div>
+<div class="prompt input_prompt">In&nbsp;[55]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">20</span><span class="p">,</span> <span class="mi">5</span><span class="p">))</span>
@@ -28728,6 +28738,7 @@ iIiIiFQsBR4REREREalYCjwiIiIiIlKx/gIRrgV42MCnowAAAABJRU5ErkJggg==
     <span class="n">plt</span><span class="o">.</span><span class="n">subplot</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">6</span><span class="p">,</span> <span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">)</span>
     <span class="n">plt</span><span class="o">.</span><span class="n">boxplot</span><span class="p">(</span><span class="n">data</span><span class="p">[</span><span class="n">col</span><span class="p">],</span> <span class="n">showfliers</span> <span class="o">=</span> <span class="kc">False</span><span class="p">)</span>
     <span class="n">plt</span><span class="o">.</span><span class="n">title</span><span class="p">(</span><span class="n">col</span><span class="p">)</span>
+    <span class="c1"># show the Segment</span>
     <span class="k">for</span> <span class="n">j</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">2</span><span class="p">):</span>
         <span class="n">plt</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="n">true_centers</span><span class="o">.</span><span class="n">loc</span><span class="p">[</span><span class="n">segments</span><span class="p">[</span><span class="n">j</span><span class="p">]][</span><span class="n">col</span><span class="p">],</span> <span class="n">marker</span><span class="o">=</span><span class="s2">&quot;o&quot;</span><span class="p">)</span>
         <span class="n">plt</span><span class="o">.</span><span class="n">annotate</span><span class="p">(</span><span class="s1">&#39;Segment &#39;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="n">j</span><span class="p">),</span> <span class="n">xy</span><span class="o">=</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span><span class="n">true_centers</span><span class="o">.</span><span class="n">loc</span><span class="p">[</span><span class="n">segments</span><span class="p">[</span><span class="n">j</span><span class="p">]][</span><span class="n">col</span><span class="p">]))</span>
@@ -29407,6 +29418,150 @@ AOT8D3A2SeLl/+FaAAAAAElFTkSuQmCC
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
+<div class="prompt input_prompt">In&nbsp;[57]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">display</span><span class="p">(</span><span class="n">samples</span><span class="p">)</span>
+<span class="n">display</span><span class="p">(</span><span class="n">true_centers</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area">
+<div class="prompt"></div>
+
+
+<div class="output_html rendered_html output_subarea ">
+<div>
+<style>
+    .dataframe thead tr:only-child th {
+        text-align: right;
+    }
+
+    .dataframe thead th {
+        text-align: left;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>Fresh</th>
+      <th>Milk</th>
+      <th>Grocery</th>
+      <th>Frozen</th>
+      <th>Detergents_Paper</th>
+      <th>Delicatessen</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>0</th>
+      <td>44466</td>
+      <td>54259</td>
+      <td>55571</td>
+      <td>7782</td>
+      <td>24171</td>
+      <td>6465</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>13624</td>
+      <td>295</td>
+      <td>1381</td>
+      <td>890</td>
+      <td>43</td>
+      <td>84</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>4484</td>
+      <td>14399</td>
+      <td>24708</td>
+      <td>3549</td>
+      <td>14235</td>
+      <td>1681</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
+
+</div>
+
+<div class="output_area">
+<div class="prompt"></div>
+
+
+<div class="output_html rendered_html output_subarea ">
+<div>
+<style>
+    .dataframe thead tr:only-child th {
+        text-align: right;
+    }
+
+    .dataframe thead th {
+        text-align: left;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>Fresh</th>
+      <th>Milk</th>
+      <th>Grocery</th>
+      <th>Frozen</th>
+      <th>Detergents_Paper</th>
+      <th>Delicatessen</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Segment 0</th>
+      <td>8953.0</td>
+      <td>2114.0</td>
+      <td>2765.0</td>
+      <td>2075.0</td>
+      <td>353.0</td>
+      <td>732.0</td>
+    </tr>
+    <tr>
+      <th>Segment 1</th>
+      <td>3552.0</td>
+      <td>7837.0</td>
+      <td>12219.0</td>
+      <td>870.0</td>
+      <td>4696.0</td>
+      <td>962.0</td>
+    </tr>
+  </tbody>
+</table>
+</div>
+</div>
+
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
 <div class="prompt input_prompt">In&nbsp;[45]:</div>
 <div class="inner_cell">
     <div class="input_area">
@@ -29444,7 +29599,9 @@ Sample point 3 predicted to be in Segment 1
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Answer:</strong></p>
-<p>My initial prediction is that sample 0 is a big supermarket, sample 2 is a fresh produce shop or a fresh food restaurant, and sample 3 is a grocery store. These predictions are consistent with my initial prediction.</p>
+<p>Based on the feature values of the samples and the cluster centers, we can see that sample 0 and 2 have high spending on Milk, Grocery and Detergents_Paper, and seem to suggest that it belongs to Segment-1; and sample 1 has high spending on Fresh and low on Milk and Detergents_Paper, and suggest that it belongs to Segment 0.</p>
+<p>After running the prediction, it seems that the predictions are consistent with the observed pattern in the features I just mentioned.</p>
+<p>Recall that my initial prediction is that sample 0 is a big supermarket, sample 2 is a fresh produce shop or a fresh food restaurant, and sample 3 is a grocery store. These predictions are consistent with my initial prediction as well.</p>
 
 </div>
 </div>
